[package]
name = "usn-journal-watcher"
version = "0.1.0"
authors = ["KIKIJIKI <dev@kikijiki.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
windows = { version = "0.29.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl"] }